--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,8 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+        <uses-permission android:name="android.permission.INTERNET"
+            tools:ignore="WrongManifestParent" />
         <activity
             android:name=".Activity.IntroActivity"
             android:exported="true" >
