--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.google.android.material:material:1.8.0-alpha02'
     implementation 'com.github.bumptech.glide:glide:4.8.0'
-    implementation 'com.google.code.gson.:gson.2.8.7'
-
+    implementation 'com.google.code.gson:gson.2.8.7'
 }
